<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="141dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_nama"
            style="@style/detailActivityBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.031"
            tools:text="nama" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/detailActivityBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_nama"
            app:layout_constraintStart_toStartOf="@+id/tv_nama"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama"
            tools:text="username" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/tv_repository"
                style="@style/detailActivityBlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Repository"
                android:layout_marginRight="14dp" />

            <TextView
                android:id="@+id/tv_followers"
                style="@style/detailActivityBlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="followers"
                android:layout_marginLeft="26dp" />

            <TextView
                android:id="@+id/tv_following"
                style="@style/detailActivityBlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="following"
                android:layout_marginLeft="35dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/tv_username"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username">

            <TextView
                android:id="@+id/textView"
                style="@style/detailActivityBlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/repository_text"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="99dp"
                tools:layout_editor_absoluteY="241dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/textView2"
                style="@style/detailActivityBlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/follower_text"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="178dp"
                tools:layout_editor_absoluteY="241dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/textView3"
                style="@style/detailActivityBlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_text"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="249dp"
                tools:layout_editor_absoluteY="241dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_company"
            style="@style/detailActivityBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:drawableLeftCompat="@drawable/ic_baseline_house_24" />

        <TextView
            android:id="@+id/tv_lokasi"
            style="@style/detailActivityBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/lokasi"
            app:layout_constraintEnd_toEndOf="@+id/tv_company"
            app:layout_constraintStart_toStartOf="@+id/tv_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_company"
            app:drawableLeftCompat="@drawable/ic_baseline_location_on_24" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            app:tabSelectedTextColor="@color/teal_700"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lokasi" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="400dp"
            android:layout_height="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/favorite_setting"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="32dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>